@@ -7,6 +7,7 @@ Version 1.18.3 *
 - fixed base directory line input too long in project edit
 - fixed cut off text issue in NEOS dialog
 - fixed the activation of parameter search filter in GAMS Configuration editor
+- fixed suffix issue for opt files on Windows
 
 Version 1.18.2
 ==================
